# PaddleOCR-OnnxRuntime

./: CMakeLists.txt  OCR.cpp  OCR.h  README.md  db_postprocess.cpp  db_postprocess.h  main.cpp  operators.cpp  operators.h  predict_base.cpp  predict_base.h  predict_det.cpp  predict_det.h  predict_rec.cpp  predict_rec.h  rec_postprocess.cpp  rec_postprocess.h  utils.cpp  utils.h
